@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1603 2015/05/09 08:01:28 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1604 2015/05/09 10:22:36 mrueg Exp $
+
+  09 May 2015; Manuel Rüger <mrueg@gentoo.org> kde5.eclass:
+  Sync with overlay.
 
   09 May 2015; Ulrich Müller <ulm@gentoo.org>
   -tests/autotools:eaclocal_amflags.sh, +tests/autotools_eaclocal_amflags.sh,
